# Workshop-ERP-BE

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/core/: config.py  database.py  logging.py  security.py
app/middleware/: activity_middleware.py
app/models/: __init__.py  activity_log.py  base.py  customer.py  inventory.py  invoice.py  job_card.py  permission.py  user.py  vehicle.py
app/repositories/: base.py  customer.py  inventory.py  invoice.py  job_card.py  vehicle.py
app/schemas/: analytics.py  auth.py  base.py  customer.py  daybook.py  gate_pass.py  inventory.py  invoice.py  job_card.py  staff.py  vehicle.py
app/services/: activity_log_service.py  analytics_service.py  auth_service.py  customer_service.py  daybook_service.py  email_service.py  gate_pass_service.py  inventory_service.py  invoice_service.py  job_card_service.py  pdf_service.py  permission_service.py  vehicle_service.py
app/templates/emails/: base.html  gate_pass_issued.html  invoice_generated.html  job_card_created.html  job_status_changed.html  (+2 more)
migrations/: env.py
migrations/versions/: 139a36b99491_activity_logs.py  251eeb746e0f_initial_schema.py  3727d25fd5d0_settings.py  508e51827427_activity_logs.py  655ce31b133d_add_invoices_daybook_gatepasses.py  6a720f14f9ac_vehicles.py  9b2adf6aad9d_gatepass_pdf_and_billing.py  b07812a449c2_permission_suppliers.py  bc61f559f2ae_customer_vechile_and_jobs.py  f78e617f1a9f_customer_vechile_and_jobs.py
nginx/: nginx.conf
nginx/conf .d/: autogarden.conf
(+15 files in other folders)
