[tool.poetry]
name = "autogarden-api"
version = "0.1.0"
description = "Auto Garden Workshop Management System — API"
authors = ["Auto Garden Dev Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.12"
redis = "^5.1.1"
celery = {extras = ["redis"], version = "^5.4.0"}
pillow = "^11.0.0"
reportlab = "^4.2.5"
boto3 = "^1.35.0"
structlog = "^24.4.0"
httpx = "^0.27.0"
tenacity = "^9.0.0"
python-slugify = "^8.0.4"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.1"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
